Stap 3: Code cleanup & testing

--- a/front-end/public/locales/en/common.json
+++ b/front-end/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "app.title": "Exam App",
   "general.error": "An error has occurred. Please try again later.",
+  "general.loading": "Loading...",
   "header": {
     "welcome": "Welcome",
     "nav": {
